mark 1 проверять еще рано
Первую версию закидывал для бота что бы увидеть требования для сдачи.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a class="link-nav" href="">Contacts</a></li>
           </ul>
         </nav>
-        <address class="contacts">
+        <address class="header-contacts">
           <ul class="addres-list">
             <li class="contacts">
               <a class="link-address" href="mailto:info@devstudio.com"
@@ -637,7 +637,85 @@
         </div>
         <button class="review-form-submit" type="submit">Send</button>
       </form>
+      </div>
     </div>
-    </div>
+        <!-- mobile menu -->
+        <div class="mobile-menu is-open">
+          <button class="mobile-menu-close-btn">
+            <svg
+              class="mobile-menu-close-icon"
+              width="8"
+              height="8"
+              aria-label="modal-menu-close-icon"
+            >
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-navigation">
+            <ul class="mobile-menu-navigation-list">
+              <li>
+                <a
+                  class="mobile-menu-navigation-link mobile-studio"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li>
+                <a class="mobile-menu-navigation-items" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="mobile-menu-navigation-items" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="mobile-menu-contacts-container">
+            <address class="mobile-menu-contact">
+              <ul class="mobile-menu-contact-list">
+                <li>
+                  <a
+                    class="mobile-menu-contact-link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="mobile-menu-contact-link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <ul class="mobile-menu">
+              <li class="mobile-menu-social-list">
+                <a href="#" class="mobile-menu-social-link">
+                  <svg class="mobile-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-menu-social-list">
+                <a href="#" class="mobile-menu-social-link">
+                  <svg class="mobile-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-menu-social-list">
+                <a href="#" class="mobile-menu-social-link">
+                  <svg class="mobile-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-menu-social-list">
+                <a href="#" class="mobile-menu-social-link">
+                  <svg class="mobile-menu-social-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
   </body>
 </html>
