--- a/index.html
+++ b/index.html
@@ -450,16 +450,15 @@
     <footer class="main-footer">
       <div class="container footer-container">
         <div class="logo-conteiner">
-        <a class="logo-footer" href="./index.html"
-          >web <span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-text">
+          <a class="logo-footer" href="./index.html"
+          >web <span class="footer-logo">Studio</span></a>
+          <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
         </div>
         <div>
-          <p class="footer-icons">Social media</p>
+        <p class="footer-icons">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a href="" class="footer-social-link">
@@ -641,14 +640,14 @@
     </div>
         <!-- mobile menu -->
         <div class="mobile-menu is-open">
-          <button class="mobile-menu-close-btn">
+          <button type="button" class="mobile-menu-close-btn">
             <svg
               class="mobile-menu-close-icon"
               width="8"
               height="8"
               aria-label="modal-menu-close-icon"
             >
-              <use href="./images/icons.svg#icon-close"></use>
+              <use href="./images/icons.svg#icon-close-black"></use>
             </svg>
           </button>
           <nav class="mobile-menu-navigation">
@@ -661,10 +660,10 @@
                 >
               </li>
               <li>
-                <a class="mobile-menu-navigation-items" href="">Portfolio</a>
+                <a class="mobile-menu-navigation-link" href="">Portfolio</a>
               </li>
               <li>
-                <a class="mobile-menu-navigation-items" href="">Contacts</a>
+                <a class="mobile-menu-navigation-link" href="">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -672,20 +671,20 @@
             <address class="mobile-menu-contact">
               <ul class="mobile-menu-contact-list">
                 <li>
+                  <a class="mobile-menu-tel-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li>
                   <a
-                    class="mobile-menu-contact-link"
+                    class="mobile-menu-mail-link"
                     href="mailto:info@devstudio.com"
                     >info@devstudio.com</a
                   >
                 </li>
-                <li>
-                  <a class="mobile-menu-contact-link" href="tel:+110001111111"
-                    >+11 (000) 111-11-11</a
-                  >
-                </li>
               </ul>
             </address>
-            <ul class="mobile-menu">
+            <ul class="mobile-menu-soc">
               <li class="mobile-menu-social-list">
                 <a href="#" class="mobile-menu-social-link">
                   <svg class="mobile-menu-social-icon" width="24" height="24">
