--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     ./images/Images-Portfolio/project-card-1-mobile.jpg     288w,
                     ./images/Images-Portfolio/project-card-1-mobile@2x.jpg  576w
                   " sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-1-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-1-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -297,7 +297,7 @@
                     ./images/Images-Portfolio/project-card-2-mobile.jpg     288w,
                     ./images/Images-Portfolio/project-card-2-mobile@2x.jpg  576w
                   " sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-2-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-2-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -319,7 +319,7 @@
                     ./images/Images-Portfolio/project-card-3-mobile.jpg     288w,
                     ./images/Images-Portfolio/project-card-3-mobile@2x.jpg  576w
                   " sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-3-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-3-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -341,7 +341,7 @@
                     ./images/Images-Portfolio/project-card-4-mobile.jpg     288w,
                     ./images/Images-Portfolio/project-card-4-mobile@2x.jpg  576w
                   " sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-4-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-4-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -363,7 +363,7 @@
                     ./images/Images-Portfolio/project-card-5-mobile.jpg     288w,
                     ./images/Images-Portfolio/project-card-5-mobile@2x.jpg  576w
                   " sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-5-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-5-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -389,7 +389,7 @@
                   (min-width: 1158px) 360px,
                   (min-width: 768px) 356px,
                   (max-width: 767px) 288px"
-                src="./images/Images-Portfolio/project-card-6-mobile.jpg" alt="project card" width="360" height="300" />
+                src="./images/Images-Portfolio/project-card-6-mobile.jpg" alt="project card" width="360" />
               <p class="text-overflow">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -464,7 +464,7 @@
       </div>
     </div>
   </footer>
-  <div class="backdrop is-open">
+  <div class="backdrop">
     <div class="modal-window">
       <button type="button" class="modal-close-button">
         <svg class="modal-button-icon" width="8" height="8" aria-label="icon close">
@@ -530,7 +530,7 @@
     </div>
   </div>
   <!-- mobile menu -->
-  <div class="mobile-menu is-open">
+  <div class="mobile-menu">
     <button type="button" class="mobile-menu-close-btn">
       <svg class="mobile-menu-close-icon" width="8" height="8" aria-label="modal-menu-close-icon">
         <use href="./images/icons.svg#icon-close-black"></use>
