--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <a class="logo-footer" href="./index.html">web <span class="footer-logo">Studio</span></a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.>
+          digital marketing & growth solutions.
         </p>
       </div>
       <div>
